hphp/test/zend/bad/ext/standard/tests/network/gethostbyname_error005.php
<?php
	var_dump(gethostbyname());
?>
